# taiga-cli

./: .env  .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: build-publish.yml
docs/api/: auth.md  epics.md  tasks.md  user_story.md
taiga_cli/: __init__.py  api.py  cli.py  config.py  enums.py  main.py  models.py  services.py
taiga_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
