[project]

name = "taigactl"
version = "0.1.0"
description = "CLI modular para gestão do Taiga Hermes Conrad"
authors = [
    { name = "Equipe Hermes Conrad" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24.0",
    "typer>=0.9.0"
]

[project.scripts]
taiga = "taiga_cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "factory-boy",
    "testcontainers",
    "ruff",
    "mypy",
    "pre-commit",
    "black",
    "isort"
]

[tool.black]
line-length = 100
target-version = ["py310"]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true


[tool.ruff]
target-version = "py310"
line-length = 100
